<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShoeStore</string>
    <string name="user_name">User Name</string>
    <string name="type_in_your_user_name">Type in your User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="help_format" tools:ignore="Typos">As This Project is a Startup Project, you will get the user name and  password this time only\n user name: Udacity \npassword: Udacity_1</string>
    <string name="title">FWD Project (1)</string>
    <string name="welcome_to_the_project">Welcome To The FWD Project (1)</string>
    <string name="instructions">Instructions</string>
    <string name="wrong_user_name">Wrong User Name , or Password</string>
    <string name="instructions_items">1.The shoe listing page will show the list of shoes\n\n2.show a button for adding a new shoe\n\n3.the detail page will be for adding a shoe entry\n\n4.All entries will available only as long as the app is running\n\n5.This Project is a startup Projects from FWD and Udacity\n\n6.under the Coarse Advanced Android Programing using Kotlin</string>
    <string name="read_instructions">Please Read Carefully all the 6 instructions below</string>
    <string name="accept_and_open_shoe_listing">Accept and Open Shoe Listing</string>
    <string name="shoe_name">Name</string>
    <string name="company">Company</string>
    <string name="shoe">Shoe</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="missing_data">Missing Shoe Data !</string>
    <string name="logout">Log Out</string>
    <string name="welcome">Welcome</string>
    <string name="shoes">Shoes</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="size_should_be_number">Shoe Size should be a number !!</string>
    <string name="shoe_image_view">Shoe Image View</string>

</resources>
