<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.login.LoginViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/userNameText"
                style="@style/labelStyle"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/userNameEditText"
                style="@style/stretchedTextStyle"
                android:autofillHints="name"
                android:hint="@string/type_in_your_user_name"
                android:inputType="text"
                android:text="@{loginViewModel.userName}"
                android:afterTextChanged="@{(text)->loginViewModel.updateUserName(text.toString().trim())}"
                android:layout_marginHorizontal="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/passwordText"
                style="@style/labelStyle"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/stretchedTextStyle"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:text="@{loginViewModel.password}"
                android:afterTextChanged="@{(text)->loginViewModel.updatePassword(text.toString().trim())}"
                android:layout_marginHorizontal="8dp"
                />


        </LinearLayout>
        <TextView
            android:id="@+id/helpText"
            style="@style/labelStyle"
            android:layout_margin="16dp"
            android:visibility="gone"
            android:text="@string/help_format" />

        <Button
            android:id="@+id/loginButton"
            style="@style/buttonStyle"
            android:onClick="@{() -> loginViewModel.checkCredential()}"
            android:text="@string/login" />
        <Button
            android:id="@+id/signUpButton"
            style="@style/buttonStyle"
            android:text="@string/create_new_account"
            android:onClick="@{() -> loginViewModel.checkCredential()}"
             />
    </LinearLayout>
</layout>