<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoeNameLabel"
                style="@style/labelStyle"
                android:text="@string/shoe"
               />

            <TextView
                android:id="@+id/shoeNameText"
                style="@style/stretchedTextStyle"
                android:text="@{shoe.name}"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoeCompanyLabel"
                style="@style/labelStyle"
                android:text="@string/company"
               />

            <TextView
                android:id="@+id/shoeCompanyText"
                style="@style/stretchedTextStyle"
                android:text="@{shoe.company}"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoeSizeLabel"
                style="@style/labelStyle"
                android:text="@string/size"
                />

            <TextView
                android:id="@+id/shoeSizeText"
                style="@style/stretchedTextStyle"
                android:text="@{Double.toString(shoe.size)}"
              />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoeDescriptionLabel"
                style="@style/labelStyle"
                android:text="@string/description"
                />

            <TextView
                android:id="@+id/shoeDescriptionText"
                style="@style/stretchedTextStyle"
                android:text="@{shoe.description}"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/shoeImageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/shoe_image_view" />


    </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>