<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="instructionsViewModel"
            type="com.udacity.shoestore.instructions.InstructionsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.288" />

        <TextView
            android:id="@+id/readInstructionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_instructions"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.345" />

        <ScrollView
            android:id="@+id/instructionsScroll"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintVertical_bias="0.156">

            <TextView
                android:id="@+id/instructionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/instructions_items"

                />
        </ScrollView>

        <Button
            android:id="@+id/openShoeListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/accept_and_open_shoe_listing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsScroll"
            app:layout_constraintVertical_bias="0.292"
            android:onClick="@{() -> instructionsViewModel.openShoeListScreen()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>